--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.roboto-medium {
+    font-family: 'Roboto Medium', sans-serif;
+    font-weight: 400;
+    line-height: 24px;
+    font-size: 16px;
+}
