--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -3,8 +3,10 @@
 @tailwind utilities;
 
 .roboto-medium {
-    font-family: 'Roboto Medium', sans-serif;
-    font-weight: 400;
+    font-family: "Roboto", sans-serif;
+    font-style: normal;
+    font-weight: 500;
     line-height: 24px;
     font-size: 16px;
+    color: #19191B;
 }
