--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -10,3 +10,10 @@
     font-size: 16px;
     color: #19191B;
 }
+
+.roboto-bold {
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 32px;
+}
