--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -17,3 +17,54 @@
     font-style: normal;
     font-size: 32px;
 }
+
+.gauge-container {
+    position: relative;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    background-color: #f0f0f0;
+}
+
+.gauge-bar {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    clip-path: polygon(50% 0%, 50% 100%, 100% 100%, 100% 0%);
+    background: linear-gradient(to top, #ff0000, #ffff00, #00ff00);
+    transform: rotate(-45deg);
+    transform-origin: bottom center;
+}
+
+.gauge-labels {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+.label {
+    font-size: 12px;
+    color: #333;
+    position: absolute;
+}
+
+.label.top {
+    top: -20px;
+}
+
+.label.bottom {
+    bottom: -20px;
+}
+
+.x-nav-link:active {
+    border-bottom: none;
+}
+
+.no-border-bottom {
+    border-bottom: none;
+}
