--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -18,6 +18,22 @@
     font-size: 32px;
 }
 
+.roboto-bold-6 {
+    font-family: "Roboto", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+    font-size: 34px;
+    line-height: 56px;
+}
+
+.roboto-regular {
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 16px;
+    line-height: 24px;
+}
+
 .gauge-container {
     position: relative;
     width: 200px;
