--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -94,3 +94,15 @@ input[type="radio"]:checked {
     color: #C8000B;
     border: 1px solid #f0f0f0;
 }
+
+.background-container {
+    background-image: url('../../public/images/bg-judge.jpg');
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    opacity: 0.25;
+}
+
+.opacity-50 {
+    opacity: 0.50;
+}
