--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -109,3 +109,9 @@ input[type="radio"]:checked {
 .semi-circle-border {
     border-radius: 50% 0 0 50%;
 }
+
+canvas {
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+}
