--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,6 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+.roboto-condensed-header-900 {
+    font-family: "Roboto Condensed", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 900;
+    font-size: 21px;
+    font-style: normal;
+}
+
 .roboto-medium {
     font-family: "Roboto", sans-serif;
     font-style: normal;
