--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -37,7 +37,7 @@
     font-family: "Roboto", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 16px;
+    font-size: 18px;
     line-height: 24px;
 }
 
@@ -479,4 +479,14 @@ canvas {
             }
         }
     }
+}
+
+.zoom-image img {
+    transition: transform 0.3s ease-in-out;
+}
+
+.zoom-image:hover img {
+    transform: scale(1.2);
+    filter: grayscale(100%) brightness(150%);
+
 }
