--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -29,7 +29,7 @@
     font-family: "Roboto", sans-serif;
     font-weight: 700;
     font-style: normal;
-    font-size: 24px;
+    font-size: 18px;
 }
 
 .roboto-bold-6 {
@@ -46,6 +46,22 @@
     font-style: normal;
     font-size: 18px;
     line-height: 24px;
+}
+
+.roboto-regular-16 {
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 18px;
+    line-height: 24px;
+}
+
+.roboto-regular-24 {
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 24px;
+    line-height: 36px;
 }
 
 .gauge-container {
@@ -490,11 +506,9 @@ canvas {
 
 .zoom-image img {
     transition: transform 0.3s ease-in-out;
-    filter: grayscale(100%)
 }
 
 .zoom-image:hover img {
     transform: scale(1.2);
-    filter: brightness(150%);
 
 }
