--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -61,6 +61,14 @@
     font-weight: 400;
     font-style: normal;
     font-size: 24px;
+    line-height: 24px;
+}
+
+.roboto-regular-24 {
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 24px;
     line-height: 36px;
 }
 
