dashboard layout of cards

--- a/resources/css/dashboard.css
+++ b/resources/css/dashboard.css
@@ -293,6 +293,7 @@ main .analyse .searches svg circle {
 }
 
 main .analyse .progresss .percentage {
+    padding: 2px;
     position: absolute;
     top: -3px;
     left: -1px;
