--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -32,6 +32,13 @@
     font-size: 18px;
 }
 
+.roboto-bold-18 {
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 18px;
+}
+
 .roboto-regular-14 {
     font-family: "Roboto", sans-serif;
     font-weight: 500;
